--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
     <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="static/style.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/style.css"/>
   </head>
 
   <body>
     <h1>TESTE</h1>
   </body>
+  <script src="/js/main.js"></script>
 </html>
