[Feature] Create API
-API add to comunicate with db and update DIV with AJAX

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,11 +1,15 @@
 <html>
   <head>
     <title>Home</title>
+    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/style.css"/>
   </head>
 
   <body>
     <h1>TESTE</h1>
+    <div id="teste">
+    	
+    </div>
   </body>
   <script src="/js/main.js"></script>
 </html>
