[Feature] Database communication
-Add MySQL function to: SELECT, UPDATE, INSERT, DELETE from databse
-Add users table
-Show users table on index.html

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,10 +6,19 @@
   </head>
 
   <body>
-    <h1>TESTE</h1>
-    <div id="teste">
-    	
-    </div>
+    <h1>Header</h1>
+    <table border="1" width="500">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Nome</th>
+                <th>Sobre Nome</th>
+                <th>Endereco</th>
+            </tr>
+        </thead>
+        <tbody id="tabela">
+        </tbody>
+    </table>
   </body>
   <script src="/js/main.js"></script>
 </html>
