--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,3 +1,54 @@
-h1{
-	background-color: cadetblue;
+.submit{
+	
+	color: #A8A8A8;
+    border: 1px solid #A8A8A8;
+    background-color: transparent;
+    padding: 4px;
+}
+
+.submit:hover{
+	color: #fff;
+    border: 1px solid #A8A8A8;
+    outline: 0;
+    background-color: #A8A8A8;
+    padding: 4px;
+}
+table {
+    border-collapse: collapse;
+    width: 100%;
+    border: none;
+    text-align: center;
+}
+
+th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+
+    text-align: center;
+}
+
+tr:hover {background-color:#f5f5f5;}
+
+.btn{
+	font-family: Cabin,'Helvetica Neue',Helvetica,Arial,sans-serif;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+    text-transform: uppercase;
+    border-radius: 0;
+     display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+}
+.container{
+	margin-left: 6vw;
+	margin-right: 6vw;
+	margin-bottom: 2vh;
+	margin-top: 2vh;
+}
+.row{
+	padding: 20px;
 }
