--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,24 +1,46 @@
 <html>
   <head>
     <title>Home</title>
-    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="/css/style.css"/>
   </head>
-
   <body>
-    <h1>Header</h1>
+    <h1 class="title">Teste Técnico</h1>
+    <div class="container">
     <table border="1" width="500">
         <thead>
             <tr>
-                <th>ID</th>
                 <th>Nome</th>
                 <th>Sobre Nome</th>
-                <th>Endereco</th>
+                <th>Endereço</th>
+                <th>Ação</th>
             </tr>
         </thead>
         <tbody id="tabela">
         </tbody>
     </table>
+    </div>
+    <div class="container">
+      <p> Adicionar campo</p>
+      <form onsubmit="return addField();" autocomplete="on">
+        <input id="addNome" type="text" name="nome" placeholder="João" autocomplete='given-name' required>
+        <input id="addSobrenome" type="text" name="sobrenome" placeholder="Silva" autocomplete='family-name' required>
+        <input id="addEndereco" type="text" name="endereco" placeholder="Curitiba" autocomplete='street-address' required>
+        <input class="submit btn" name="submit_form" type="submit" value="Submit">
+      </form>
+    </div>
+    <div class="container" id="updateField" style="display: none;">
+        <p>Atualizar campo</p>
+        <form onsubmit="return updateField();">
+        <input id="updateId" type="text" name="id" placeholder="1" style="display: none;" required>
+        <input id="updateNome" type="text" name="nome" placeholder="João" required>
+        <input id="updateSobrenome" type="text" name="sobrenome" placeholder="Silva" required>
+        <input id="updateEndereco" type="text" name="endereco" placeholder="Curitiba" required>
+        <input class="submit btn" name="submit_form" type="submit" value="Submit">
+      </form>
+    </div>
   </body>
+  <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+  <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js'></script>
   <script src="/js/main.js"></script>
 </html>
