--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,18 +1,7 @@
-.submit{
-	
-	color: #A8A8A8;
-    border: 1px solid #A8A8A8;
-    background-color: transparent;
-    padding: 4px;
-}
+/* Google Fonts */
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
-.submit:hover{
-	color: #fff;
-    border: 1px solid #A8A8A8;
-    outline: 0;
-    background-color: #A8A8A8;
-    padding: 4px;
-}
+/* Estilo da table */
 table {
     border-collapse: collapse;
     width: 100%;
@@ -24,31 +13,137 @@ th, td {
     padding: 8px;
     text-align: left;
     border-bottom: 1px solid #ddd;
-
     text-align: center;
 }
 
-tr:hover {background-color:#f5f5f5;}
+tr:hover {
+	background-color:#f5f5f5;
+}
 
+/* Estilo dos formulários */
+input{
+	outline: none;
+	display: block;
+	font-size: 1.2em;
+	padding: 0.25em;
+	width: 35vw;
+	margin-bottom: 1em;
+	border-radius: 3px;
+	border: 1px solid #BABABA;
+}
+
+/* Body */
+body{
+	font-family: 'Open Sans', 'sans-serif';
+	box-sizing: border-box;
+	min-height: 100vh;
+	background: white;
+ 
+}
+
+/* Título no centro */
+.title{
+	text-align: center;
+}
+
+/* Botões */
 .btn{
-	font-family: Cabin,'Helvetica Neue',Helvetica,Arial,sans-serif;
-    -webkit-transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
-    text-transform: uppercase;
-    border-radius: 0;
-     display: inline-block;
-    font-weight: 400;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
+	border-radius: 1px;
+    padding: 5px 18px;
+    font-size: 13px;
+	text-decoration: none;
+	margin: 5px;
+	color: #fff;
+	position: relative;
+	display: inline-block;
+	outline: none;
+	width: 110px;
 }
+
+.btn:active {
+	transform: translate(0px, 5px);
+	-webkit-transform: translate(0px, 2px);
+	box-shadow: 0px 1px 0px 0px;
+}
+.btn.editar{
+	background-color: #55acee;
+  	box-shadow: 0px 5px 0px 0px #3C93D5;
+}
+.btn.deletar{
+	background-color: #e74c3c;
+	box-shadow: 0px 5px 0px 0px #CE3323;	
+}
+.btn.submit{
+	background-color: #2ecc71;
+	box-shadow: 0px 5px 0px 0px #2db868;
+}
+.nav {
+  text-align: center;
+  list-style: none;
+  padding: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #fff;
+}
+
+.nav li {
+  padding: 2%;
+  font-weight: bold;
+  display: inline-block;
+  color: black;
+  text-decoration: underline;
+}
+
+
+
+/* Div principal */
 .container{
+	text-align: center;
 	margin-left: 6vw;
 	margin-right: 6vw;
 	margin-bottom: 2vh;
 	margin-top: 2vh;
+	display: table;
+  	margin: 0 auto;
 }
-.row{
-	padding: 20px;
+
+.card{
+	padding: 30px;
+}
+
+/* Alerta de erro */
+.alert {
+	display: none;
+	height: 20px;
+    padding: 15px;
+    background-color: #f44336;
+    color: white;
+    margin-top: 10px;
+}
+
+.closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.closebtn:hover {
+    color: black;
+}
+
+img {
+    border-radius: 50%;
+}
+a {
+
+  text-decoration: none;
+}
+
+ul {
+	text-align: left;
 }
