--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Error</title>
-</head>
-<body>
-	<h1>Not found</h1>
-</body>
-</html>
+<div class="container">
+  <h1>Error</h1>
+  
+  <h2>404 Not found</h2>
+
+</div>
