--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -82,13 +82,22 @@ body{
 	background-color: #55acee;
   	box-shadow: 0px 5px 0px 0px #3C93D5;
 }
+.btn.editar:hover{
+	background-color: #6FC6FF;
+}
 .btn.deletar{
 	background-color: #e74c3c;
 	box-shadow: 0px 5px 0px 0px #CE3323;	
 }
+.btn.deletar:hover{
+	background-color: #FF6656;
+}
 .btn.submit{
 	background-color: #2ecc71;
 	box-shadow: 0px 5px 0px 0px #2db868;
+}
+.btn.submit:hover{
+	 background-color: #48E68B;
 }
 .nav {
   text-align: center;
@@ -126,6 +135,7 @@ body{
 
 /* Alerta de erro */
 .alert {
+	width: 100%;
 	display: none;
 	height: 20px;
     padding: 15px;
