--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Home</title>
+    <title>Teste Técnico</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="/css/style.css"/>
   </head>
